# zoefilemanager

./: .gitignore  CMakeLists.txt  CODE_STRUCTURE.md  EXPLORATION_REPORT.md
.workbuddy/memory/: 2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  MEMORY.md
cmake/: deploy_macos.cmake
icon/: ZoeFileManager.icns  make_icon.py
licenses/: OpenSSL.txt  THIRD_PARTY_LICENSES.txt  libssh2.txt
src/: AboutDialog.cpp  AboutDialog.h  AppFonts.cpp  AppFonts.h  DirectoryTree.cpp  DirectoryTree.h  FileListView.cpp  FileListView.h  FilePanel.cpp  FilePanel.h  FileSystemRouter.cpp  FileSystemRouter.h  I18n.cpp  I18n.h  MainWindow.cpp  MainWindow.h  PathBar.cpp  PathBar.h  RealFileSystem.cpp  RealFileSystem.h  RemoteDialog.cpp  RemoteDialog.h  ScriptDialog.cpp  ScriptDialog.h  SearchDialog.cpp  SearchDialog.h  SettingsDialog.cpp  SettingsDialog.h  SftpClient.cpp  SftpClient.h  ShortcutBar.cpp  ShortcutBar.h  SmbClient.cpp  SmbClient.h  Types.h  main.cpp
tests/: test_pathbar_routing.cpp  test_router_sftp.cpp  test_sftp_client.cpp  test_shutdown_crash.cpp
